# Rsader

./: .gitignore  Cargo.toml  Dioxus.toml  build.rs  index.html  todo.md
.cargo/: config.toml
resources/: CommandPaletteStyle.css
scripts/: orderbook_usdt_bithumb.rn
src/: ast.rs  broadcast.rs  config.rs  currency.rs  exchange.rs  global_context.rs  global_state.rs  ir.rs  lib.rs  main.rs  ui.rs  utils.rs  vm.rs  websocket.rs  window.rs
src/ast/: parse_rule.lalrpop  parse_rule.rs  token.rs
src/exchange/: binance.rs  bithumb.rs  upbit.rs
src/ir/: arena.rs  basic_block.rs  function.rs  instruction.rs  lifter.rs  scope.rs  ty.rs  value.rs
src/ui/: main_window.rs  main_window.slint  style.rs  style.slint  sub_window.rs  utils.rs  widgets.rs
src/ui/widget/: button.slint
src/ui/widgets/: dummy.rs  orderbook.rs
src/utils/: async_helpers.rs  broadcaster.rs  decimal.rs  flag.rs  http.rs  http_client.rs  maybe_trait.rs
src/vm/: action.rs  builtin_functions.rs  builtin_ident.rs  builtin_types.rs  context.rs  error.rs  eval_ast.rs  exchange.rs  function.rs  utils.rs  value.rs  variable_storage.rs
src/vm/action/: async_funtion_call.rs  evaluate.rs  mm_tick_trade.rs  order.rs  tick_trade.rs
src/window/: action_list.rs  candle_chart.rs  canvas.rs  commander.rs  console.rs  dashboard.rs  orderbook.rs  settings.rs  sub_window.rs  utils.rs  widgets.rs
src/window/canvas/: orderbook.rs
src/window/widgets/: keybind.rs
