[package]
name = "rsader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
base64 = "0.22.0"
chrono = "0.4.37"
crossbeam = { version = "0.8.4", features = [
    "crossbeam-channel",
    "crossbeam-queue",
] }
async-channel = "2.2.1"
async-recursion = "1.1.0"
async-trait = "0.1.80"
endorphin = "0.1.9"
ewebsock = "0.5.0"
futures = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = "9.3.0"
num-traits = "0.2.18"
once_cell = "1.19.0"
parking_lot = { version = "0.12.1", features = ["send_guard"] }
pin-project = "1.1.5"
reqwest = { version = "0.12.4" }
ring = "0.17.8"
ringbuf = "0.3.3"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_qs = "0.13.0"
sha2 = "0.10.8"
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.58"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-wasm = "0.2.1"
trait-variant = "0.1.2"
unwrap_let = "0.1.0"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4"] }
plotters = "0.3.5"
toml = "0.8.12"
slint = "1.5.1"
rune = "0.13.2"
rune-modules = { version = "0.13.2", features = ["time"] }

[[bin]]
name = "rsader"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = [
    "rustls",
    "tokio-rustls",
    "rustls-tls-native-roots",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.42"
wasm-sockets = "1.0.0"
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
tracing-subscriber-wasm = "0.1.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[profile.dev]
opt-level = 'z'
